# astralog

./: .gitignore  CMakeLists.txt  TODO.md
.github/workflows/: clang-format.yml
example_data/: raw_data_1779370900_0000.txt  raw_data_1779370908_0001.txt
include/: astralog.hpp  astralog_config.hpp  astralog_data.hpp  astralog_input.hpp  astralog_io.hpp  astralog_pipeline.hpp  astralog_rules.hpp
src/: astralog.cpp  astralog_data.cpp  astralog_input.cpp  astralog_io.cpp  astralog_pipeline.cpp  astralog_rules.cpp  main.cpp
